Hopefulyl fixed bug where the site gets cut off on mobile...?

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -15,7 +15,7 @@ textarea {
 .full-site-container {
   background-attachment: fixed;
   background: cover;
-  overflow: auto;
+  overflow: scroll;
   display: block;
   min-height: 100%;
   width: 100%;
